Created a new page with the player and buttons; clicking TRANSCRIBE creates new jplayer and webform nodes (deleted upon submission)

--- a/theme/jplayer.css
+++ b/theme/jplayer.css
@@ -71,12 +71,22 @@ div.jp-interface ul.jp-controls a {
 	overflow:hidden;
 	text-indent:-9999px;
 }
+
+/****************************************************************************
+ *******************************CUSTOM STUFF*********************************
+ ****************************************************************************/
+
 #jp-segment {
         width:200px;
         height:20px;
         font-size:small;        
         text-indent:5px;
 }
+
+/****************************************************************************
+ *****************************END OF CUSTOM STUFF****************************
+ ****************************************************************************/
+
 a.jp-play,
 a.jp-pause {
 	width:40px;
