--- a/theme/jplayer.css
+++ b/theme/jplayer.css
@@ -83,6 +83,20 @@ div.jp-interface ul.jp-controls a {
         text-indent:5px;
 }
 
+.trbutton {
+    width:40px;
+    height:40px;
+    background: url("jplayer.blue.monday.jpg") 0 0 no-repeat;
+    border: none;
+}
+
+.trbutton:hover {
+    width:40px;
+    height:40px;
+    background: url("jplayer.blue.monday.jpg") -41px 0 no-repeat;
+    border: none;
+}
+
 /****************************************************************************
  *****************************END OF CUSTOM STUFF****************************
  ****************************************************************************/
