--- a/theme/jplayer.css
+++ b/theme/jplayer.css
@@ -97,6 +97,20 @@ div.jp-interface ul.jp-controls a {
     background: url("jplayer.blue.monday.jpg") -41px 0 no-repeat;
 }
 
+.anbutton {
+    width:40px;
+    height:40px;
+    border: none;
+    background: url("jplayer.blue.monday.jpg") 0 0 no-repeat;
+}
+
+.anbutton:hover {
+    width:40px;
+    height:40px;
+    border: none;
+    background: url("jplayer.blue.monday.jpg") -41px 0 no-repeat;
+}
+
 /****************************************************************************
  *****************************END OF CUSTOM STUFF****************************
  ****************************************************************************/
